--- a/front-end/index.html
+++ b/front-end/index.html
@@ -62,7 +62,7 @@
 			<div class="chat-area">
 				<div class="title"><b>Conversation title</b><i class="fa fa-search"></i></div>
 				<div class="chat-list">
-					<ul>
+					<ul id="ul1">
 						<li class="me">
 							<div class="name">
 								<span class="">John Doe</span>
@@ -72,6 +72,7 @@
 								<span class="msg-time">5:00 pm</span>
 							</div>
 						</li>
+						
 						<li class="">
 							<div class="name">
 								<span class="">Christian Smith</span>
@@ -81,14 +82,15 @@
 								<span class="msg-time">5:01 pm</span>
 							</div>
 						</li>
+						<li id="li1" class="me"></li>
 					</ul>
 				</div>
 				<div class="input-area">
 					<div class="input-wrapper">
-						<input type="text" value="" placeholder="Message here">
+						<input id="MessageText" type="text" value="" placeholder="Message here">
 						<i class="fa fa-smile-o"></i>
 					</div>
-					<input type="button" value="Submit" class="send-btn">
+					<input id="AddMsg" type="button" value="Submit" class="send-btn">
 				</div>
 			</div>
 			<div class="right-tabs">
@@ -115,6 +117,47 @@
 			</div>
 		</div>
 	</div>
+	<script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
+	<script>
+		const ID = function () {
+        return '_' + Math.random().toString(36).substr(2, 9);};
+		let userid = '';        
+        if(localStorage.getItem('userid')){
+            userid = localStorage.getItem('userid');
+        } else {
+            const id = ID();
+            localStorage.setItem('userid', id)
+            userid = id;
+        }
+		let button = document.getElementById('AddMsg');
+		let message = document.getElementById('MessageText');
+		const socket = io('http://localhost:3000');
+
+		button.addEventListener('click', AddNewMsg)
+
+		function AddNewMsg(){
+			var today = new Date();
+			const li = document.createElement('li');
+			const divName = document.createElement('div')
+			divName.className ="name";
+			const divMessage = document.createElement('div')
+			divMessage.className ="message";
+			const spanName = document.createElement('span');
+			spanName.className = "";
+			spanName.innerText = "YAsin"
+			const spanTime = document.createElement('span');
+			spanTime.className = "msg-time";
+			spanTime.innerText = (today.getHours() + ":" + today.getMinutes());
+			const p = document.createTextNode(message.value);
+			divName.appendChild(spanName);
+			divMessage.appendChild(p);
+			divMessage.appendChild(spanTime)
+			var currentUl = document.getElementById('li1');
+			currentUl.appendChild(divName, divMessage);
+			currentUl.appendChild(divMessage);
+			socket.emit('plusMsg',message.value,today,userid);
+		}
+	</script>
 </body>
 
 </html>
